2008-01-31  Jonh Wendell <jwendell@gnome.org>

	* data/vinagre.glade: Allow port numbers less than 1024. (Closes #513381)

2008-01-30  Jonh Wendell <jwendell@gnome.org>

	* Register vinagre in gconf as a handler to vnc:// protocol

2008-01-28  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: post-release bump to 0.4.91

==================== 0.4.90 ====================

2008-01-28  Jonh Wendell <jwendell@gnome.org>

	* configure.ac, NEWS, README: Version 0.4.90

2008-01-28  Jonh Wendell <jwendell@gnome.org>

	* Makefile.am,
	* help/C/vinagre.xml: Fix some docs issues

2008-01-27  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-window.c,
	* src/vinagre-window-private.h: Fix a crash in delete_event,
	by disconnecting from the clipboard signal.

2008-01-25  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-notebook.c: Adjust the size of tabs.

2008-01-24  Jonh Wendell <jwendell@gnome.org>

	* data/vinagre.desktop.in.in: Removed 'OnlyShowIn' line (LP: #185707)

2008-01-24  Jonh Wendell <jwendell@gnome.org>

	* configure.ac,
	* src/vinagre-main.c,
	* src/vinagre-connection.c
	* src/vinagre-commands.c: Use gio instead of gnome-vfs.

2008-01-20  Jonh Wendell <jwendell@gnome.org>

	* src/vnagre-tab.c (open_vnc): Don't use new symbol from gtk-vnc trunk.
	Closes #509993.

2008-01-15  Jonh Wendell <jwendell@gnome.org>

	* data/vinagre.1,
	* data/Makefile.am: Added a manual page, thanks to Emilio Pozuelo Monfort.
	Closes #509490.

2007-12-19  Jonh Wendell <jwendell@gnome.org>

	* lots of files: Initial documentation skeleton, patch from Jaap A. Haitsma,
	  important step to fix bug #503806.

2007-12-15  Jonh Wendell <jwendell@gnome.org>
	* src/vinagre-commands.c:
	Make links in about dialog clickable. Closes #503770
	Thanks to Jaap A. Haitsma for the patch.

2007-12-14  Jonh Wendell <jwendell@gnome.org>
	Small adjusts in .desktop files. Closes #503650

2007-12-13  Jonh Wendell <jwendell@gnome.org>
	* src/vinagre-window.c (create_menu_bar_and_toolbar):