@@ -1,3 +1,10 @@
+2008-02-10  Jonh Wendell <jwendell@gnome.org>
+
+	* src/vinagre-window.c,
+	* src/vinagre-main.c,
+	* src/vinagre-connection.[ch]: More work on vnc:// protocol, also
+	fixes issues in recent connections stuff.
+
 2008-01-31  Jonh Wendell <jwendell@gnome.org>
 
 	* data/vinagre.glade: Allow port numbers less than 1024. (Closes #513381)
